--- a/static/map.html
+++ b/static/map.html
@@ -29,7 +29,7 @@
         });
       }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBOq7TgkrPxRzKTkFK7lR_FLLC5ejHf3tg&callback=initMap"
     async defer></script>
   </body>
 </html>
